scripts/tests/errors/err_while_no_condition.bu
// BAD: while with no condition
while {
    break;
}
print("should not reach here");
